external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_match_tuple.exp
error[E01018]: invalid 'match'
  ┌─ tests/development/enums/matching/invalid_match_tuple.move:6:9
  │  
6 │ ╭         match (x()) {
7 │ │             (x, y) => ()
8 │ │         }
  │ ╰─────────^ Invalid 'match' form. 'match' must have at least one arm

error[E01002]: unexpected token
  ┌─ tests/development/enums/matching/invalid_match_tuple.move:7:15
  │
7 │             (x, y) => ()
  │               ^
  │               │
  │               Unexpected ','
  │               Expected ')'

error[E01002]: unexpected token
  ┌─ tests/development/enums/matching/invalid_match_tuple.move:7:18
  │
7 │             (x, y) => ()
  │                  ^
  │                  │
  │                  Unexpected ')'
  │                  Expected '=>'

error[E04005]: expected a single type
   ┌─ tests/development/enums/matching/invalid_match_tuple.move:12:16
   │
 3 │     fun x(): (u64, u64) { (0, 42) }
   │              ---------- Expected a single type, but found expression list type: '(u64, u64)'
   ·
12 │         match (x()) {
   │                ^^^ Invalid 'match' subject

